configured settings in eclipse

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>AnotherTry</name>
+	<name>0THE_GATE_MAIN0</name>
 	<comment></comment>
 	<projects>
 	</projects>
