icons and sprites huge modification

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,7 +1,16 @@
-/monsters/
+/axePA_down0.png
+/axePA_down1.png
+/axePA_left0.png
+/axePA_left1.png
+/axePA_right0.png
+/axePA_right1.png
+/axePA_up0.png
+/axePA_up1.png
+/axe_wood.png
 /bin/
 /interactive_tiles/
 /maps/
+/monsters/
 /npc/
 /objects/
 /player/
