adding village map

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,4 +1,29 @@
-/monster/
-/main/
+/axePA_down0.png
+/axePA_down1.png
+/axePA_left0.png
+/axePA_left1.png
+/axePA_right0.png
+/axePA_right1.png
+/axePA_up0.png
+/axePA_up1.png
+/axe_wood.png
+/bin/
+/interactive_tiles/
+/maps/
 /monsters/
+/npc/
+/objects/
+/player/
+/projectiles/
+/shield_slime.png
+/skills/
+/sounds/
+/tiles/
+/AI/
+/DataHandling/
+/buildings/
 /entity/
+/environment/
+/main/
+/monster/
+/object/
